######## 2016-02-26 ########
alter table flashsale_userbudgetlog add column budget_date date NOT NULL;

######## 2016-02-25 ########
alter table supplychain_supply_product add column supplier_sku varchar(64) default '';
alter table supplychain_supply_product add column remain_num int(11) default 0;

######## 2016-02-23 ########
alter table pay_coupon_template add column bind_pros varchar(256) default null ;
alter table flashsale_promotion_sampleorder add award_status tinyint(1) NOT NULL;
######## 2016-02-17 ########
alter table suplychain_flashsale_orderlist add column pay_status varchar(32) default '正常' ;
######## 2016-02-16 ########

alter table flashsale_activity_entry add column mask_link varchar(256) default null ;
alter table flashsale_trade add column order_type int(11) NOT NULL;
######## 2016-02-15 ########

alter table flashsale_activity_entry add column login_required tinyint(1) NOT NULL;
######## 2016-02-14 ########

alter table flashsale_xlmm_nine_pic add column description varchar(1024) default null ;
######## 2016-02-03 ########

alter table shop_weixin_unionid add column modified datetime NOT NULL;
update shop_weixin_unionid set modified=created where id != 0;
######## 2016-01-31 ########
alter table flashsale_cushops_detail add column modified datetime NOT NULL;

update flashsale_cushops_detail set modified=now() where id != 0;

alter table flashsale_district add column created datetime NOT NULL;
alter table flashsale_district add column modified datetime NOT NULL;

update flashsale_district set created=now(),modified=now() where id != 0;

alter table flashsale_productdetail add column created datetime NOT NULL;
alter table flashsale_productdetail add column modified datetime NOT NULL;

update flashsale_productdetail set created=now(),modified=now() where product_id != 0;

alter table flashsale_trade_charge add column created datetime NOT NULL;
alter table flashsale_trade_charge add column modified datetime NOT NULL;
