@@ -1,3 +1,7 @@
+######## 2016-02-27 ########
+alter table flashsale_userbudgetlog add column referal_id varchar(32) NOT NULL;
+CREATE INDEX `flashsale_userbudgetlog_26941be2` ON `flashsale_userbudgetlog` (`referal_id`);
+
 ######## 2016-02-26 ########
 alter table flashsale_userbudgetlog add column budget_date date NOT NULL;
 
